Changed _config.yml & resume.html layout

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -26,6 +26,13 @@
         </div>
         {% endif %}
 
+        <!-- 
+          Displaying e-mail & telephone instead of whole address.
+        -->
+        <div class="header-contact-info">
+          <p>{{ site.resume_contact_telephone }} ## {{ resume_contact_email }}</p>
+        </div>
+
         <div class="title-bar no-print">
 
           <!-- Your title is also defined in the _config.yml file -->
