--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -30,7 +30,7 @@
           Displaying e-mail & telephone instead of whole address.
         -->
         <div class="header-contact-info">
-          <p>📞 {{ site.resume_contact_telephone }} • 👩🏻‍🎤 {{ site.resume_contact_email }} • 👩🏻‍💻 {{ site.resume_contact_email_academic }}</p>
+          <p>📞 {{ site.resume_contact_telephone }} • 👩🏻‍🔧 {{ site.resume_contact_email }} • 👩🏻‍💻 {{ site.resume_contact_email_academic }}</p>
         </div>
 
         <div class="title-bar no-print">
@@ -60,7 +60,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Experience</h2>
+          <h2>Experiência profissional</h2>
         </header>
 
         {% for job in site.data.experience %}
@@ -80,7 +80,7 @@
       <!-- begin Education -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Education</h2>
+          <h2>Formação acadêmica</h2>
         </header>
 
         {% for education in site.data.education %}
@@ -108,7 +108,7 @@
       <!-- begin Projects -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Projects</h2>
+          <h2>Projetos</h2>
         </header>
 
         {% for project in site.data.projects %}
@@ -129,7 +129,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Skills</h2>
+          <h2>Cursos extracurriculares</h2>
         </header>
         {% for skill in site.data.skills %}
         <div class="resume-item">
@@ -147,7 +147,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>Reconhecimento</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
@@ -167,7 +167,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>Participações em Eventos e Conselhos</h2>
         </header>
 
         {% for association in site.data.associations %}
@@ -187,7 +187,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Outside Interests</h2>
+          <h2>Interesses & Hobbies</h2>
         </header>
 
         <div class="resume-item">
@@ -207,7 +207,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Additional Links</h2>
+          <h2>Links adicionais</h2>
         </header>
 
         <div class="resume-item">
