--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -30,7 +30,7 @@
   }
 
   .header-name {
-    @include sans;
+    @include serif;
     font-size: 3rem;
     font-weight: 900;
     text-align: center;
