--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -75,7 +75,7 @@
 }
 
 @mixin serif {
-  font-family: "Rubik", "Lora", "Minion Pro", Palatino, Georgia, serif;
+  font-family: "Roboto Slab", "Lora", Palatino, Georgia, serif;
 }
 
 @mixin serif_regular {
