--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@ $grid-gutter:     10px !default;
 // Colors
 $white:             #fff;
 $black:             #333;
+$pink:              #E3008C;
 
 // Styles
 $text_color:        $black;
@@ -15,7 +16,7 @@ $text_color:        $black;
 $body-font: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 // The base body size
-$body-font-size: 14px !default;
+$body-font-size: 16px !default;
 
 // Monospace font stack
 $mono-font: Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
