--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -8,7 +8,7 @@
   margin-bottom: 1.5rem;
 
   h2 {
-    @include sans;
+    @include serif;
     font-weight: 900;
     font-size: 1.75rem;
     letter-spacing: -.05rem;
@@ -40,7 +40,7 @@
   }
 
   .header-contact-info {
-    @include sans;
+    @include serif;
     text-align: center;
   }
   .header-contact-info p a {
@@ -54,7 +54,7 @@
     @include clearfix;
 
     .header-title {
-      @include sans;
+      @include serif;
       font-weight: 300;
       font-size: 1.75rem;
       line-height: 2rem;
@@ -138,7 +138,7 @@
   .resume-item { margin-bottom: 2rem; }
 
   .resume-item-title {
-    @include sans_bold;
+    @include serif;
     margin: 0 0 .75rem;
     font-size: 1.5rem;
     letter-spacing: -.05rem;
@@ -202,7 +202,7 @@
   body { font-size: 12px; line-height: 1rem; }
   .page-header { padding: 1rem 0 .2rem;
     .header-name {
-      @include sans_bold;
+      @include serif_bold;
       font-size: 2rem;
       margin: 0 0 .2rem;
     }
