--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -30,7 +30,7 @@
           Displaying e-mail & telephone instead of whole address.
         -->
         <div class="header-contact-info">
-          <p>📞 {{ site.resume_contact_telephone }} • 👩🏻‍🔧 {{ site.resume_contact_email }} • 👩🏻‍💻 {{ site.resume_contact_email_academic }}</p>
+          <p>📞 {{ site.resume_contact_telephone }} • 👩🏻‍💼 {{ site.resume_contact_email }} • 👩🏻‍💻 {{ site.resume_contact_email_academic }}</p>
         </div>
 
         <div class="title-bar no-print">
