--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -47,7 +47,7 @@
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Me mande um e-mail!</a>
+        <a href="mailto:{{ site.resume_contact_email_academic }}" class="contact-button no-print" itemprop="email">Me mande um e-mail!</a>
         {% elsif site.resume_looking_for_work == 'no' %}
         <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
@@ -129,7 +129,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Cursos extracurriculares</h2>
+          <h2>Habilidades</h2>
         </header>
         {% for skill in site.data.skills %}
         <div class="resume-item">
@@ -147,7 +147,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Reconhecimento</h2>
+          <h2>Cursos extracurriculares</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
