--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -129,7 +129,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Habilidades</h2>
+          <h2>Línguas</h2>
         </header>
         {% for skill in site.data.skills %}
         <div class="resume-item">
