--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -239,7 +239,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://github.com/julianatfg">@julianatfg</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line">Made by <a href="https://github.com/julianatfg/resume" target="_blank">@julianatfg</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
         <p class="footer-line"><i>and she's hooked to the silver screen</i> 👩🏻‍🎤</p>
       </footer>
 
