--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -44,5 +44,15 @@
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url">{% include icons/icon-website.html %}</a></li>
   {% endif %}
 
+  <!-- WhatsApp link -->
+  {% if site.resume_social_links.resume_whatsapp_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_whatsapp_url }}" class="icon-link" itemprop="url">{% include icons/icon-whatsapp.html %}</a></li>
+  {% endif %}
+
+  <!-- Telegram link -->
+  {% if site.resume_social_links.resume_telegram_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_telegram_url }}" class="icon-link" itemprop="url">{% include icons/icon-telegram.html %}</a></li>
+  {% endif %}
+
 </ul>
 {% endif %}
