📌hotfix!! security alert fix

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -240,7 +240,7 @@
 
       <footer class="page-footer">
         <p class="footer-line">Made by <a href="https://github.com/julianatfg/resume" target="_blank">@julianatfg</a>. Fork me on <a href="https://github.com/jglovier/resume-template" target="_blank">GitHub</a>.</p>
-        <p class="footer-line">Última atualização: Dezembro/2020.</p>
+        <p class="footer-line">Última atualização: Janeiro/2021.</p>
         <p class="footer-line"><i>and she's hooked to the silver screen</i> 👩🏻‍🎤</p>
       </footer>
 
